# xml_konwerter

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
konwdocs/: __init__.py  konwertujdok.py  konwxml.py
tests/: helper.py  test.py
tests/testdata/: test_faktura.xml
xml_konwerter/: __init__.py  konwertujdok.py
