[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"konwdocs" = "konwdocs"

[project]
name = "xml_konwerter"
version = "0.0.1"
requires-python = ">=3.10"
authors = [
  {name = "Stanisław Bartkowski", email = "stanislawbartkowski@gmail.com"},
]
readme = "README.md"
